# RIMD-cpp

./: CMakeLists.txt  README.md  install.sh  rimd.cpp
models/: Stanford_Bunny.ply
src/: mesh.cpp  mesh.h  meshtorimd.cpp  rimd.h  rimdtomesh.cpp
